--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest --no-snapshots"
   },
   "dependencies": {
+    "antd": "^5.3.3",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -17,12 +18,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
+    "@types/mockjs": "^1.0.7",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "axios-mock-adapter": "^1.21.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-html-reporter": "^3.7.1",
+    "jest-html-reporters": "^3.1.4",
+    "jest-puppeteer": "^8.0.6",
+    "mockjs": "1.0.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
