--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest --no-snapshots"
+    "test": "jest",
+    "test:debug": "jest"
   },
   "dependencies": {
     "antd": "^5.3.3",
@@ -24,6 +25,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "axios-mock-adapter": "^1.21.3",
+    "enzyme-adapter-react-16": "^1.15.7",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-html-reporter": "^3.7.1",
